Forgot to push previous changes but now I have the whole app working

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="returnB">Return</string>
     <string name="Icon">Pokemon Icon</string>
     <string name="Search">Search</string>
+    <string name="typeOne">Type 1</string>
+    <string name="typeTwo">Type 2</string>
     <string name="NA">N/A</string>
 
 </resources>
